додає оверлей у портфоліо

--- a/index.html
+++ b/index.html
@@ -112,13 +112,22 @@
           <h2>Чим ми займаємося</h2>
           <ul class="doing">
             <li class="doing-item">
-              <img src="./images/box1.jpg" alt="Пише код за клавіатурою" width="370" />
+              <div class="doing-thumb">
+                <img src="./images/box1.jpg" alt="Пише код за клавіатурою" width="370" />
+                <p class="doing-sign">Десктопні додатки</p>
+              </div>
             </li>
             <li class="doing-item">
-              <img src="./images/box2.jpg" alt="Створення UI/UX для смартфонів" width="370" />
+              <div class="doing-thumb">
+                <img src="./images/box2.jpg" alt="Створення UI/UX для смартфонів" width="370" />
+                <p class="doing-sign">Мобільні додатки</p>
+              </div>
             </li>
             <li class="doing-item">
-              <img src="./images/box3.jpg" alt="Палітра на планшеті" width="370" />
+              <div class="doing-thumb">
+                <img src="./images/box3.jpg" alt="Палітра на планшеті" width="370" />
+                <p class="doing-sign">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -187,7 +196,7 @@
                     ></a>
                   </li>
                   <li class="social-item">
-                    <a  class="social-link" href="#">
+                    <a class="social-link" href="#">
                       <svg class="social-team-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -220,7 +229,7 @@
                     ></a>
                   </li>
                   <li class="social-item">
-                    <a  class="social-link" href="#">
+                    <a class="social-link" href="#">
                       <svg class="social-team-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -253,7 +262,7 @@
                     ></a>
                   </li>
                   <li class="social-item">
-                    <a  class="social-link" href="#">
+                    <a class="social-link" href="#">
                       <svg class="social-team-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
