--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,14 @@
           <!-- Картки Портфоліо -->
           <ul class="cards-portfolio">
             <li class="cards-item">
-              <img src="./images/c1notebook.jpg" alt="Ноутбук" width="370" />
+              <div class="card-thumb">
+                <p class="card-coment">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
+                <img src="./images/c1notebook.jpg" alt="Ноутбук" width="370" />
+              </div>
               <div class="card-sign">
                 <h3 class="card-title">Технокряк</h3>
                 <p class="card-text">Веб-сайт</p>
@@ -138,7 +145,7 @@
         </div>
       </section>
     </main>
-<!-- Футер -->
+    <!-- Футер -->
     <footer class="footer">
       <div class="container join">
         <div>
@@ -169,25 +176,25 @@
           <p class="text-join">приєднуйтесь</p>
           <ul class="social-footer-list">
             <li class="social-footer-item">
-              <a class="social-footer-logo" href="#">
+              <a class="social-footer-link" href="#">
                 <svg class="social-footer-icon">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="social-footer-item">
-              <a href="#">
+              <a class="social-footer-link" href="#">
                 <svg class="social-footer-icon">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="social-footer-item">
-              <a href="#">
+              <a class="social-footer-link" href="#">
                 <svg class="social-footer-icon">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="social-footer-item">
-              <a href="#">
+              <a class="social-footer-link" href="#">
                 <svg class="social-footer-icon">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
