--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="main-nav">
           <a href="./index.html" class="logo">Web<span class="black-logo">Studio</span></a>
           <ul class="site-nav">
-            <li class="item"><a class="nav-link" href="./index.html">Студія</a></li>
+            <li class="item"><a class="nav-link current" href="./index.html">Студія</a></li>
             <li class="item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
             <li class="item"><a class="nav-link" href="#">Контакти</a></li>
           </ul>
@@ -57,7 +57,7 @@
             Ефективні рішення для <br />
             вашого бізнесу
           </h1>
-          <button type="button" class="button-hero">Замовити послугу</button>
+          <button type="button" class="button-hero" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <!-- Переваги -->
@@ -370,6 +370,13 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="close-modal" data-modal-close>✕</button>
+      </div>
+    </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
