--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
           <a href="./index.html" class="logo">Web<span class="black-logo">Studio</span></a>
           <ul class="site-nav">
             <li class="item"><a class="nav-link" href="./index.html">Студія</a></li>
-            <li class="item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item"><a class="nav-link current" href="./portfolio.html">Портфоліо</a></li>
             <li class="item"><a class="nav-link" href="#">Контакти</a></li>
           </ul>
         </nav>
@@ -73,11 +73,13 @@
           <ul class="cards-portfolio">
             <li class="cards-item">
               <div class="card-thumb">
-                <p class="card-coment">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+                <div class="coment-overlay">
+                  <p class="card-coment">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <img src="./images/c1notebook.jpg" alt="Ноутбук" width="370" />
               </div>
               <div class="card-sign">
@@ -86,56 +88,128 @@
               </div>
             </li>
             <li class="cards-item">
-              <img src="./images/c2basket.jpg" alt="Баскетбол" width="370" />
+              <div class="card-thumb">
+                <div class="coment-overlay">
+                  <p class="card-coment">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <img src="./images/c2basket.jpg" alt="Баскетбол" width="370" />
+              </div>
               <div class="card-sign">
                 <h3 class="card-title">Постер New Orlean vs Golden Star</h3>
                 <p class="card-text">Дизайн</p>
               </div>
             </li>
             <li class="cards-item">
-              <img src="./images/c3seafood.jpg" alt="Ресторан Seafood" width="370" />
+              <div class="card-thumb">
+                <div class="coment-overlay">
+                  <p class="card-coment">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <img src="./images/c3seafood.jpg" alt="Ресторан Seafood" width="370" />
+              </div>
               <div class="card-sign">
                 <h3 class="card-title">Ресторан Seafood</h3>
                 <p class="card-text">Додаток</p>
               </div>
             </li>
             <li class="cards-item">
-              <img src="./images/c4headphones.jpg" alt="Навушники" width="370" />
+              <div class="card-thumb">
+                <div class="coment-overlay">
+                  <p class="card-coment">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <img src="./images/c4headphones.jpg" alt="Навушники" width="370" />
+              </div>
               <div class="card-sign">
                 <h3 class="card-title">Проєкт Prime</h3>
                 <p class="card-text">Маркетинг</p>
               </div>
             </li>
             <li class="cards-item">
-              <img src="./images/c5boxes.jpg" alt="Коробки" width="370" />
+              <div class="card-thumb">
+                <div class="coment-overlay">
+                  <p class="card-coment">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <img src="./images/c5boxes.jpg" alt="Коробки" width="370" />
+              </div>
               <div class="card-sign">
                 <h3 class="card-title">Проєкт Boxes</h3>
                 <p class="card-text">Додаток</p>
               </div>
             </li>
             <li class="cards-item">
-              <img src="./images/c6monitor.jpg" alt="Монітор" width="370" />
+              <div class="card-thumb">
+                <div class="coment-overlay">
+                  <p class="card-coment">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <img src="./images/c6monitor.jpg" alt="Монітор" width="370" />
+              </div>
               <div class="card-sign">
                 <h3 class="card-title">Inspiration has no Borders</h3>
                 <p class="card-text">Веб-сайт</p>
               </div>
             </li>
             <li class="cards-item">
-              <img src="./images/c7openbook.jpg" alt="Відкрита книга" width="370" />
+              <div class="card-thumb">
+                <div class="coment-overlay">
+                  <p class="card-coment">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <img src="./images/c7openbook.jpg" alt="Відкрита книга" width="370" />
+              </div>
               <div class="card-sign">
                 <h3 class="card-title">Видання Limited Edition</h3>
                 <p class="card-text">Дизайн</p>
               </div>
             </li>
             <li class="cards-item">
-              <img src="./images/c8label.jpg" alt="Лейба" width="370" />
+              <div class="card-thumb">
+                <div class="coment-overlay">
+                  <p class="card-coment">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <img src="./images/c8label.jpg" alt="Лейба" width="370" />
+              </div>
               <div class="card-sign">
                 <h3 class="card-title">Проєкт LAB</h3>
                 <p class="card-text">Маркетинг</p>
               </div>
             </li>
             <li class="cards-item">
-              <img src="./images/c9workingonnotebook.jpg" alt="Працює за ноутбуком" width="370" />
+              <div class="card-thumb">
+                <div class="coment-overlay">
+                  <p class="card-coment">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                <img src="./images/c9workingonnotebook.jpg" alt="Працює за ноутбуком" width="370" />
+              </div>
               <div class="card-sign">
                 <h3 class="card-title">Growing Business</h3>
                 <p class="card-text">Додаток</p>
